# spiking_neural_network

./: CMakeLists.txt  README.md
src/: interface.cpp  interface.hpp  main.cpp  neuron.cpp  neuron.hpp
tests/: main.cpp
